--- a/frontend/styles/Home.module.scss
+++ b/frontend/styles/Home.module.scss
@@ -11,8 +11,9 @@
   padding: 5rem 0;
   flex: 1;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
   align-items: center;
 }
 
@@ -25,8 +26,34 @@
 .description {
   line-height: 1.5;
   font-size: 1.5rem;
+  padding-bottom: 1rem;
 }
-
+.form {
+  display: flex;
+  flex-direction: column;
+}
+.label{
+  width: 100%;
+  margin: auto;
+  font-size: 1.25rem;
+}
+.input {
+  border-radius: 0.25rem;
+  border: 0.1rem solid rgb(194, 173, 173);
+  width: 100%;
+  height: 2.5rem;
+  padding: 0 0.5rem;
+  font-size: 1.25rem;
+}
+.button {
+  background-color:transparent;
+  border: 0.5px solid #3d78bb;
+  font-size: 1.25rem;
+  color: #3d78bb;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  margin-top: 1rem;
+}
 .card {
   margin: 1rem;
   flex-basis: 45%;
